<resources>
    <string name="app_name" translatable="false">ÖZINŞE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="next">Өткізу</string>
    <string name="welcomeMsg">ÖZINŞE-ге қош келдің!</string>
    <string name="firstScreen">Фильмдер, телехикаялар, ситкомдар, анимациялық жобалар, телебағдарламалар мен реалити-шоулар, аниме және тағы басқалары</string>
    <string name="secondScreen">Кез келген құрылғыдан қара \n Сүйікті фильміңді  қосымша төлемсіз телефоннан, планшеттен, ноутбуктан қара</string>
    <string name="thirdScreen">Тіркелу оңай. Қазір тіркел де қалаған фильміңе қол жеткіз</string>
    <string name="finish">Әрі қарай</string>
    <string name="email" translatable="false">Email</string>
    <string name="Password1">Құпия сөз</string>
    <string name="Password2">Құпия сөзді қайталаңыз</string>
    <string name="signup">Тіркелу</string>
    <string name="signupInfo">Деректерді толтырыңыз</string>
    <string name="errorRegistration">Мұндай email-ы бар пайдаланушы тіркелген</string>
    <string name="linkRegistration">Сізде аккаунт бар ма?</string>
    <string name="emailHint">Сіздің email</string>
    <string name="passwordHint">Сіздің құпия сөзіңіз</string>
    <string name="wrongFormat">Қате формат</string>
    <string name="hello">Сәлем</string>
    <string name="signin_info">Аккаунтқа кіріңіз</string>
    <string name="error_authorization">Email немесе Құпия сөзіңіз қате</string>
    <string name="forgotPassword">Құпия сөзді ұмыттыңыз ба?</string>
    <string name="signin">Кіру</string>
    <string name="link_authorization">Аккаунтыныз жоқ па?</string>
    <string name="or">Немесе</string>
    <string name="appleId">Apple ID-мен тіркеліңіз</string>
    <string name="google">Google-мен тіркеліңіз</string>
    <string name="add_to_favourite">Тізімге қосу</string>
    <string name="share">Бөлісу</string>
    <string name="director">Режиссер:</string>
    <string name="producer">Продюсер:</string>
    <string name="more_description">Толығырақ</string>
    <string name="episodes">Бөлімдер</string>
    <string name="screenshots">Скриншоттар</string>
    <string name="similar">Ұқсас телехикаялар</string>
    <string name="all">Барлығы</string>
    <string name="hide_description">Жасыру</string>
    <string name="my_profile">Менің профилім</string>
    <string name="personal_info">Жеке деректер</string>
    <string name="edit">Өңдеу</string>
    <string name="change_password">Құпия сөзді өзгерту</string>
    <string name="language">Тіл</string>
    <string name="rules_and_regulations">Ережелер мен шарттар</string>
    <string name="dark_theme">Қараңғы режим</string>
    <string name="english" translatable="false">English</string>
    <string name="Kazakh" translatable="false">Қазақша</string>
    <string name="russian" translatable="false">Руский</string>
    <string name="exit">Шығу</string>
    <string name="sureToExit">"Сіз шынымен аккаунтыңыздан "</string>
    <string name="yesExit">Иә, шығу</string>
    <string name="no">Жоқ</string>
    <string name="yourName">Сіздің атыңыз</string>
    <string name="phone">Телефон</string>
    <string name="birthday">Туылған күні</string>
    <string name="saveChanges">Өзгерістерді сақтау</string>
    <string name="errorConnection">Қосфлу қателігі</string>

    <string name="january">қаңтар</string>
    <string name="february">ақпан</string>
    <string name="march">наурыз</string>
    <string name="april">сәуір</string>
    <string name="may">мамыр</string>
    <string name="june">маусым</string>
    <string name="july">шілде</string>
    <string name="august">тамыз</string>
    <string name="september">қыркүйек</string>
    <string name="october">қазан</string>
    <string name="november">қараша</string>
    <string name="december">желтоқсан</string>
    <string name="profile">Профиль</string>
    <string name="chooseGenre">Жанрды таңдаңыз</string>
    <string name="chooseAges">Жасына сәйкес</string>
    <string name="languageValue">Қазақша</string>
    <string name="watch">Қарау</string>
    <string name="list">Тізім</string>
    <string name="passwordsNotSame">Құпия сөздер сәйкес емес</string>
    <string name="errorSignIn">Email немесе құпия сөз қате</string>
    <string name="fillAllFields">Барлық деректерді толтырыңыз</string>
    <string name="search">Іздеу</string>
    <string name="categories">Санаттар</string>
    <string name="search_result">Іздеу нәтижелері</string>
    <string name="nothing_found">Ештеңе табылмады</string>
</resources>