<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".presentation.authorization.RegistrationFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"/>

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:fontFamily="@font/sfprodisplaybold"
            android:textSize="24sp"
            android:textColor="?attr/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signupInfo"
            android:fontFamily="@font/sfprodisplayregular"
            android:textSize="16sp"
            android:textColor="?attr/colorTertiary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:labelFor="@+id/etEmail"
            android:fontFamily="@font/sfprodisplaybold"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            app:hintEnabled="false"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:background="@drawable/sh_input"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/emailHint"
                android:textColorHint="@color/Grey400"
                android:drawablePadding="8dp"
                android:padding="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvWrongFormatEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrongFormat"
            android:fontFamily="@font/sfprodisplayregular"
            android:textSize="14sp"
            android:textColor="@color/error"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password1"
            android:labelFor="@+id/etPassword1"
            android:fontFamily="@font/sfprodisplaybold"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_show"
            app:passwordToggleTint="@color/Grey400"
            app:hintEnabled="false"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/sh_input"
                android:hint="@string/passwordHint"
                android:textColorHint="@color/Grey400"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:padding="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password2"
            android:labelFor="@+id/etPassword2"
            android:fontFamily="@font/sfprodisplaybold"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_show"
            app:passwordToggleTint="@color/Grey400"
            app:hintEnabled="false"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/sh_input"
                android:hint="@string/passwordHint"
                android:textColorHint="@color/Grey400"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:padding="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/errorRegistration"
            android:textAlignment="center"
            android:fontFamily="@font/sfprodisplayregular"
            android:textSize="14sp"
            android:textColor="@color/error"
            android:layout_marginTop="32dp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/sh_main_button"
            android:fontFamily="@font/sfprodisplayregular"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="16sp"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplayregular"
                android:text="@string/linkRegistration"
                android:textColor="?attr/colorTertiary"
                android:textSize="14sp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/tvLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplaymedium"
                android:textColor="@color/Red300"
                android:text="@string/signin"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>