<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sh_background_circle_top_32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="32dp"
    tools:context=".presentation.profile.ExitBottomsheet">

    <View
        android:layout_width="64dp"
        android:layout_height="5dp"
        android:background="@drawable/divider_5dp_grey"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:fontFamily="@font/sfprodisplaybold"
        android:textSize="24sp"
        android:textColor="?attr/colorPrimary"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="58dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sureToExit"
        android:fontFamily="@font/sfprodisplayregular"
        android:textSize="16sp"
        android:textColor="@color/Grey400"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/sh_main_button"
        android:fontFamily="@font/sfprodisplayregular"
        android:text="@string/yesExit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorBackgroundFloating"
        android:fontFamily="@font/sfprodisplayregular"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="?attr/colorButtonNormal"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>