<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorOnBackground"
    tools:context=".presentation.profile.ChangePasswordFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password1"
            android:labelFor="@+id/etPassword1"
            android:fontFamily="@font/sfprodisplaybold"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_show"
            app:passwordToggleTint="@color/Grey400"
            app:hintEnabled="false"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/sh_input"
                android:hint="@string/passwordHint"
                android:textColorHint="@color/Grey400"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:padding="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password2"
            android:labelFor="@+id/etPassword2"
            android:fontFamily="@font/sfprodisplaybold"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_show"
            app:passwordToggleTint="@color/Grey400"
            app:hintEnabled="false"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/sh_input"
                android:hint="@string/passwordHint"
                android:textColorHint="@color/Grey400"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:padding="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordsNotSame"
            android:textAlignment="center"
            android:fontFamily="@font/sfprodisplayregular"
            android:textSize="14sp"
            android:textColor="@color/error"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/sh_main_button"
        android:fontFamily="@font/sfprodisplayregular"
        android:text="@string/saveChanges"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="600"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>